# rhizome

./: .travis.yml  CHANGELOG.md  CI.toml  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  dependencies.yml  rust_auto_format.yml  update_labels.yml
proc-macro-definitions/: CHANGELOG.md  Cargo.toml
proc-macro-definitions/src/: extractable_declaration.rs  lib.rs
proc-macro-definitions/tests/: meta_version_numbers.rs
src/: dyncast.rs  friendly_names.rs  lib.rs  sync.rs
src/error/: auto_provision_error.rs  mod.rs
src/sync/: injection.rs  node.rs
tests/: derive.rs  drop_from_shared_ref.rs  dyncast.rs  extractable_macro.rs  macroless.rs  static_assertions.rs  type_key_stuff.rs  with_fruit-salad.rs
