[workspace]
members = [
	".",
	"proc-macro-definitions",
]

[patch.crates-io]
rhizome_proc-macro-definitions = { path = "proc-macro-definitions" }

[package]
name = "rhizome"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A convenient hierarchical dependency-extraction container. Supports lazy provision, shadowing and testing/configuration use cases."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/rhizome"
homepage = "https://github.com/Tamschi/rhizome/tree/v0.0.1"
documentation = "https://docs.rs/rhizome/0.0.1"
keywords = ["dependency", "extraction", "IoC", "DI"]
categories = ["data-structures", "config"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/rhizome" }
is-it-maintained-open-issues = { repository = "Tamschi/rhizome" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
macros = ["rhizome_proc-macro-definitions"]

[dependencies]
pinus = "0.0.1"
rhizome_proc-macro-definitions = { version = "0.0.1", optional = true } #public
static_assertions = "1.1.0"
tap = "1.0.1"

[dev-dependencies]
cargo-husky = "1.5.0"
doc-comment = "0.3.3"
git_info = "0.1.2"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.27"
