[workspace]
members = [
	".",
]

[package]
name = "rhizome"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A convenient hierarchical dependency-extraction container. Supports lazy provision, shadowing and testing/configuration use cases."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/rhizome"
homepage = "https://github.com/Tamschi/rhizome/tree/v0.0.1"
documentation = "https://docs.rs/rhizome/0.0.1"
keywords = ["dependency", "extraction", "IoC", "DI"]
categories = ["data-structures", "config"]
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/rhizome" }
is-it-maintained-open-issues = { repository = "Tamschi/rhizome" }
maintenance = { status = "experimental" } # This may differ between branches.

[dependencies]
field-offset = "0.3.4"
fruit-salad = { git = "https://github.com/Tamschi/fruit-salad.git", branch = "develop", features = ["macros"] }
pin-project = "1.0.8"
pinus = "0.0.4"
tap = "1.0.1"
this-is-fine = "0.0.1"
tiptoe = { version = "0.0.2", features = ["sync"] }
tracing = "0.1.26"

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
static_assertions = "1.1.0"
version-sync = "0.9.1"
wasm-bindgen-test = "0.3.27"

# FIXME: Configure docs.rs to show all features.
