[package]
name = "rhizome_proc-macro-definitions"
version = "0.0.0"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
quote = "1.0.2"
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0.7"
syn-mid = "0.5.0"

[dependencies.syn]
version = "1.0.13"
default-features = false
features = ["derive", "parsing"]
