[package]
name = "rhizome_proc-macro-definitions"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "Procedural macro definitions for rhizome."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/rhizome"
homepage = "https://github.com/Tamschi/rhizome"
documentation = "https://docs.rs/rhizome_proc-macro-definitions/0.0.1"
keywords = []
categories = []

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
quote = "1.0.2"
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0.7"
syn-mid = "0.5.0"

[dependencies.syn]
version = "1.0.13"
default-features = false
features = ["derive", "parsing"]

[dev-dependencies]
version-sync = "0.9.1"
